add query to get experiment by experiment_id
