# docs/swagger.json
@@ -5,27 +5,6 @@
     },
     "paths": {
         "/experiment": {
-            "get": {
-                "description": "Consults configuration DB to fetch experiment data.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "experiments-params"
-                ],
-                "summary": "return experiment data",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            },
             "put": {
                 "description": "Update configuration db with experiment data.",
                 "consumes": [
@@ -79,6 +58,38 @@
                         "schema": {
                             "$ref": "#/definitions/model.Experiment"
                         }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/experiment/{experiment_id}": {
+            "get": {
+                "description": "Consults configuration DB to fetch experiment data.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "experiments-params"
+                ],
+                "summary": "return experiment data",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Experiment ID",
+                        "name": "experiment_id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
